<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navEvents" />
    </group>

    <item android:title="@string/navStatistic">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_total"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/navStatisticCommon" />
                <item
                    android:id="@+id/nav_expanded"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/navStatisticExpanded" />
            </group>
        </menu>

    </item>

    <item android:title="@string/navExtra">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/navSettings" />
            </group>
        </menu>

    </item>

</menu>
